# deepvoice-chat

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
configs/: README.md
examples/: metadata.example.csv
paper/: main.tex  references.bib
paper/figures/: prompts.md
scripts/: run_smoke.sh
src/voiceagent/: __init__.py  audio.py  bench.py  cli.py  llm.py  pipeline.py  preprocess.py  tts.py
tests/: test_bench.py  test_cli.py  test_llm.py  test_pipeline.py  test_preprocess.py  test_tts.py
