[project]
name = "deepvoice-chat"
version = "0.1.0"
description = "Local DeepSeek + VoxCPM voice chat course project"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=0.33",
    "librosa>=0.10",
    "numpy>=1.26",
    "soundfile>=0.12",
    "torch>=2.5",
    "torchaudio>=2.5",
    "transformers>=4.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.8",
]

[project.scripts]
voiceagent = "voiceagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceagent"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
